...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
...
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/requiredText3"
            android:layout_width="21dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newServiceName"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="22dp"
            android:layout_toEndOf="@+id/newServiceCategory"
            android:layout_toRightOf="@+id/newServiceCategory"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:text="@string/asterisk"
            android:textSize="16sp"
...
            android:layout_width="21dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newServiceCategory"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="21dp"
            android:layout_toEndOf="@+id/newServicePrice"
            android:layout_toRightOf="@+id/newServicePrice"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:text="@string/asterisk"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/requiredText5"
            android:layout_width="21dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/newServiceDescription"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="22dp"
            android:layout_toEndOf="@+id/newServiceLocation"
            android:layout_toRightOf="@+id/newServiceLocation"
            android:autofillHints=""
            android:ems="10"
            android:gravity="center"
            android:text="@string/asterisk"
            android:textSize="16sp"
...
            android:textColor="#303030"
            android:textSize="20sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
...
